# bipred

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  RESULTS.md  _benchmark_utils.py  bivariate_demo.py  infer_vs_ldsc_sbayes.py  mixer_overlap.csv  mixer_overlap.py  overlap_estimation.csv  overlap_estimation.py  rg_architectures.csv  rg_architectures.py  rg_env_overlap.csv  rg_env_overlap.py  rg_methods.csv  rg_methods.py  rg_methods_timing.csv  rg_polygenicity.csv  rg_polygenicity.py  rg_scaling.csv  rg_scaling.py  sample_overlap.py
benchmarks/hapnest/: README.md  config_bivariate.yaml  run_bivariate.py
bipred/: __init__.py  bivariate.py  ldsc_rg.py  multichain.py
docs/: algorithm.md  guide.md  rg.md
tests/: test_bivariate.py  test_golden_bivariate.py  test_ldpred3_seam.py  test_ldsc_rg.py  test_multichain.py  test_public_api.py
