[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bipred"
dynamic = ["version"]                # single-sourced from bipred.__version__
description = "Bivariate (two-trait) LDpred: joint genetic-correlation, heritability, polygenic-overlap inference and prediction, built on ldpred3"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bjarni Vilhjálmsson" }]
# ldpred3 supplies the shared LD / sampler internals bipred builds on. It is not
# yet on PyPI; install it alongside bipred (see README) — e.g.
#   pip install "ldpred3 @ git+https://github.com/bvilhjal/ldpred3.git"
dependencies = ["numpy>=1.20", "ldpred3"]

[project.urls]
Homepage = "https://github.com/bvilhjal/bipred"
Repository = "https://github.com/bvilhjal/bipred"
Issues = "https://github.com/bvilhjal/bipred/issues"

[project.optional-dependencies]
fast = ["numba>=0.59"]          # JIT-compiled Gibbs sampler (strongly recommended)
sim = ["msprime>=1.3"]          # optional reference coalescent backend for benchmarks
test = ["pytest>=7"]
lint = ["ruff>=0.5"]            # pyflakes-style lint gate (see [tool.ruff])

[tool.setuptools]
packages = ["bipred"]

[tool.setuptools.dynamic]
version = { attr = "bipred.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
# Lint for real defects, not style: like ldpred3, the codebase uses compact
# multi-statement lines (E702) and long lines, so enforce only pyflakes (F).
target-version = "py39"

[tool.ruff.lint]
select = ["F"]
