[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bipred"
dynamic = ["version"]                # single-sourced from bipred.__version__
description = "Bivariate (two-trait) LDpred: joint genetic-correlation, heritability, polygenic-overlap inference and prediction, built on ldpred3"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bjarni Vilhjálmsson" }]
# bipred consumes ldpred3's internal sampler/LDSC compatibility seam. It is not
# yet on PyPI; install it alongside bipred as documented in README.
# CI and README pin a tested Git revision; metadata bounds the seam to 0.2.x.
dependencies = ["numpy>=1.20", "ldpred3>=0.2.0.dev0,<0.3"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/bvilhjal/bipred"
Repository = "https://github.com/bvilhjal/bipred"
Issues = "https://github.com/bvilhjal/bipred/issues"

[project.optional-dependencies]
fast = [
    "numba>=0.59; python_version < '3.14'",
    "numba>=0.66; python_version >= '3.14'",
]
sim = ["msprime>=1.3"]          # simulation only; plots are intentionally optional
bench = ["msprime>=1.3", "matplotlib>=3.7"]
test = ["pytest>=7"]
lint = ["ruff>=0.5"]            # pyflakes-style lint gate (see [tool.ruff])

[tool.setuptools]
packages = ["bipred"]

[tool.setuptools.dynamic]
version = { attr = "bipred.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
# Lint for real defects, not style: like ldpred3, the codebase uses compact
# multi-statement lines (E702) and long lines, so enforce only pyflakes (F).
target-version = "py39"

[tool.ruff.lint]
select = ["F"]
